css and content update

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <div class="intro">
       <h1>Meet</h1>
       <picture><img src="images/the-beatles-logo.png" alt="The Beatles Band logo"></picture>
-      <h2>The boys from Liverpool who changed the world of music</h2>
-      <a href="https://open.spotify.com/intl-pt/artist/3WrFJ7ztbogyGnTHbHJFl2?si=ROoxk_HbSTedKAwRmTN4eQ" target="_blank">
-        <div class="button"><img src="images/spotify.png" alt="listen on spotify"><p>Spotify</p></div>
+      <h2>The boys from Liverpool that changed the world of music</h2>
       </a>
     </div>
     <div class="beatle">
