--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <footer>
 
     <section>
-      <h1>Confira alguns discos!</h1>
+      <h1>Learn about some of their discs</h1>
     </section>
 
   <section>
