--- a/index.html
+++ b/index.html
@@ -52,71 +52,7 @@
     </div>
   </article>
   <footer>
-
-    <section>
-      <h1>Learn about some of their discs</h1>
-    </section>
-
-  <section>
-      <h2>Please Please Me</h2>
-      <p>I saw her standing there</p>
-      <p>Misery</p>
-      <p>Anna (Go to him)</p>
-      <p>Chains</p>
-      <p>Boys</p>
-      <p>Ask me Why</p>
-  </section>
-
-  <section>
-      <h2>With The Beatles</h2>
-      <p>I wont belong</p>
-      <p>All I've got to do</p>
-      <p>All My loving</p>
-      <p>Don't bother me</p>
-      <p>Little Child</p>
-      <p>Till there was you</p>
-  </section>
-
-  <section>
-      <h2>A hard day's night</h2>
-      <p>A hard day's night</p>
-      <p>I should have known</p>
-      <p>If I fell</p>
-      <p>I'm happy just to dance with you</p>
-      <p>And I love her</p>
-      <p>Tell me Why</p>
-    </section>
-    
-    <section>
-        <h2>Help!</h2>
-        <p>The night before</p>
-        <p>I need you</p>
-        <p>Ticket to ride</p>
-        <p>Dizzy Miss Lizzy</p>
-        <p>It's only love</p>
-        <p>Yesterday</p>
-    </section>
-
-  <section>
-      <h2>Rubber Soul</h2>
-      <p>Drive my car</p>
-      <p>Norwegian wood</p>
-      <p>Michelle</p>
-      <p>In my Life</p>
-      <p>Wait</p>
-      <p>Run for your life</p>
-  </section>
-
-
-  <section>
-      <h2>Revolver</h2>
-      <p>Eleanor Rigby</p>
-      <p>Taxman</p>
-      <p>I'm only Sleeping</p>
-      <p>Love you to</p>
-      <p>She said She said</p>
-      <p>For no one</p>
-  </section>
+    Coded by reis-bits, non-commercial.
   </footer>
 </main>
 </body>
