--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <img src="images/paul-mccartney.png" alt="Paul McCartney">
       <div class="beatle_text">
         <h2>Paul McCartney</h2>
-        <p>On the vocals and bass, Paul was the co-founder of The Beatles, with his incredible partnership with John Lennon, Paul wrote acclaimed songs that made success all around the world, like "Hey Jude" and "And I Love Her"!</p>
+        <p>In voice and bass, Paul was the co-founder of the Beatles, with his incredible partnership with John Lennon, Paul wrote acclaimed songs that became hits all over the world, such as "Hey Jude" and "And I Love Her"!</p>
       </div>
     </div>
     <div class="beatle-alt">
       <img src="images/john-lennon.png" alt="John Lennon">
       <div class="beatle_text-alt">
         <h2>John Lennon</h2>
-        <p>The Beatles founder, Lennon was a music genius since his younger days, having a skiffle band called "The Quarrymen" when he was at the college. He had a great carreer when he was with The Beatles, but also a pristigined solo carreer with songs like "Imagine" and "Oh my Love".</p>
+        <p>Beatles founder Lennon was a musical genius from a very young age, having a skiffle band called "The Quarrymen" when he was at school. He had a great career when he was with the Beatles, but also an impeccable solo career with songs like "Imagine" and "Oh my Love".</p>
       </div>
     </div>
     <div class="beatle">
@@ -47,7 +47,7 @@
       <img src="images/ringo-starr.png" alt="Ringo Starr" max-width="500px">
       <div class="beatle_text-alt">
         <h2>Ringo Starr</h2>
-        <p>Ringo wasn't The Beatles first drummer, that was Pete Best, Ringo was the second one, he didn't wrote any song for The Beatles discography all alone. Ringo learned how to play drums in the hospital he used to be as a kid.</p>
+        <p>Ringo wasn't the Beatles' first drummer, that was Pete Best, Ringo was the second, he didn't write any songs for the Beatles' discography on his own. Ringo learned to play the drums in the hospital where he was when he was a kid, as he was often ill.</p>
       </div>
     </div>
   </article>
